--- a/css/main.css
+++ b/css/main.css
@@ -141,3 +141,16 @@ h1, h3 {
   background-color: #0c2026;
   color: #fff;
 }
+
+.skip-links a {
+  position: absolute;
+  top: -3em;
+}
+
+.skip-links a:focus {
+  top: 0;
+}
+
+a:focus {
+  outline: 3px solid #000;
+}
